--- a/main/robots/2016.md
+++ b/main/robots/2016.md
@@ -12,9 +12,9 @@ img: /assets/images/Sparky2.jpg
 		<tr>
 			<td>
 				<!-- <p><a href="/main/?robots/2019">CPU5</a></p> -->
-				<p><a href="/main/?robots/2018">Sketch E</a></p>
-				<p><a href="/main/?robots/2017">Heart of the BEAST</a></p>
-				<p><a href="/main/?robots/2016">Sparky</a></p>
+				<p><a href="2018">Sketch E</a></p>
+				<p><a href="2017">Heart of the BEAST</a></p>
+				<p><a href="2016">Sparky</a></p>
 			</td>
 			<td>
 				Sparky did an amazing job, ranking 12th at the 10,000 Lakes Regional in Williams Arena. He made it to the quarterfinals and won one of the matches before losing to the number 2 alliance by 8 points. He did so well that he helped secure his spot at the Minnesota State High School League Championships on May 21st.
