--- a/main/robots/2017.md
+++ b/main/robots/2017.md
@@ -9,9 +9,9 @@ img: /assets/images/HotB.jpg
 		<tr>
 			<td>
 				<!-- <p><a href="/main/?robots/2019">CPU5</a></p> -->
-				<p><a href="/main/?robots/2018">Sketch E</a></p>
-				<p><a href="/main/?robots/2017">Heart of the BEAST</a></p>
-				<p><a href="/main/?robots/2016">Sparky</a></p>
+				<p><a href="2018">Sketch E</a></p>
+				<p><a href="2017">Heart of the BEAST</a></p>
+				<p><a href="2016">Sparky</a></p>
 			</td>
 			<td>
 				The Heart of the Beast had a decent season, with a major improvement between our first and second regionals.
