--- a/main/robots/2018.md
+++ b/main/robots/2018.md
@@ -8,10 +8,10 @@ img: /assets/images/SketchE.jpg
 	<tbody>
 		<tr>
 			<td>
-				<!-- <p><a href="/main/?robots/2019">CPU5</a></p> -->
-				<p><a href="/main/?robots/2018">Sketch E</a></p>
-				<p><a href="/main/?robots/2017">Heart of the BEAST</a></p>
-				<p><a href="/main/?robots/2016">Sparky</a></p>
+				<!-- <p><a href="2019">CPU5</a></p> -->
+				<p><a href="2018">Sketch E</a></p>
+				<p><a href="2017">Heart of the BEAST</a></p>
+				<p><a href="/2016">Sparky</a></p>
 			</td>
 			<td>
 				Our robot for the year of 2018, Sketch E competed in the game <em>FIRST POWER UP</em>. Sketch E's main feature is it's large linear slide located right in the middle of the robot. With this it's able to grab *Power Cubes* off the ground and quickly lift them up over 6ft in the air so it can drop them onto the Scale.
